[gd_scene load_steps=2 format=3 uid="uid://bts5ss50p1ti8"]

[ext_resource type="Script" path="res://prefabs/level_completed_ui.gd" id="1_k8h5o"]

[node name="LevelCompleted" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.211765)
script = ExtResource("1_k8h5o")

[node name="CenterContrainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContrainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContrainer/VBoxContainer"]
layout_mode = 2
text = "Level Completed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContrainer/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="CenterContrainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Retry"

[node name="NextLevelButton" type="Button" parent="CenterContrainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 16)
layout_mode = 2
text = "Next Level"

[connection signal="pressed" from="CenterContrainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContrainer/VBoxContainer/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
